# fields-ions-optics

./: 0.js  1.js  10.js  11.js  12.js  13.js  15.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js  LICENSE  README.md  _blank.html  _simulations.html  charged_particles.html  code.html  dimensions.html  electric_fields.html  electrodynamics.html  fast_electrodes.html  fdm.py  filters.html  focusing.html  header.html  index.html  index.js  introduction.html  ion_optics.html  laplace_equation.html  laptop.html  particle_flight.html  python_example_1.html  python_simulation_readme.html  quadrupoles.html  simple_electrodes.html  (+4 more)
Website Source Code/: Cargo.toml  package-lock.json  package.json
Website Source Code/js/: buttons.js  electrodes.js  fields.js  globals.js  index.js  render.js
Website Source Code/src/: lib.rs
Website Source Code/static/: _blank.html  code.html  electric_fields.html  electrodynamics.html  header.html  magnetism.html  particle_flight.html  questions.js  simple_electrodes.html  style.css  (+1 more)
files/: simulation_spreadsheet.xlsx
pages/: conclusion.html  simulation_playground.html
source/: Cargo.toml  buttons.js  constants.js  e_maps.rs  electric_fields.js  electrodes.js  fields.js  globals.js  index.js  lib.rs  render.js  twgl.js
source/libraries/: m4.js
source/maps/: alternate_lens_map.json  clear_map.json  cyclotron_map.json  earnshaw_map.json  electric_valley_map.json  funnel_map.json  kingdon_trap_map.json  lens_map.json  quadrupole_map.json  sector_nier_johnson_map.json  tof_map.json
unzipped python script/: ion_simulation_script.py
(+15 files in other folders)
